get basic 'create' working for activities with mongo
