# synprov/controllers/activities_controller.py
@@ -1,24 +1,31 @@
 import connexion
 import six
 
+from bson import json_util
 from synprov.models.json_activity import JsonActivity  # noqa: E501
+from synprov.models.json_activity_request import JsonActivityRequest  # noqa: E501
 from synprov.models.json_paginated_results_of_reference import JsonPaginatedResultsOfReference  # noqa: E501
 from synprov import util
+from synprov.config import mongo
 
 
-def create_activity(user_id, body=None):  # noqa: E501
+def create_activity(body):  # noqa: E501
     """Create a new.
 
     Create a new &lt;a href&#x3D;\&quot;${org.sagebionetworks.repo.model.provenance.Activity}\&quot; &gt;Activity&lt;/a&gt;. If the passed &lt;a href&#x3D;\&quot;${org.sagebionetworks.repo.model.provenance.Activity}\&quot;&gt;Activity&lt;/a&gt; object contains a &lt;a href&#x3D;\&quot;${org.sagebionetworks.repo.model.provenance.Used}\&quot; &gt;Used&lt;/a&gt; array, you must set the concreteType field of each Used subclass. &lt;p&gt; Access Control: READ access is granted to those users who can see a single Entity that was generated by this Activity. &lt;/p&gt; # noqa: E501
 
-    :param user_id: The user that is doing the create.
-    :type user_id: float
-    :param body: Create a new &lt;a href&#x3D;\&quot;${org.sagebionetworks.repo.model.provenance.Activity}\&quot; &gt;Activity&lt;/a&gt;. If the passed &lt;a href&#x3D;\&quot;${org.sagebionetworks.repo.model.provenance.Activity}\&quot;&gt;Activity&lt;/a&gt; object contains a &lt;a href&#x3D;\&quot;${org.sagebionetworks.repo.model.provenance.Used}\&quot; &gt;Used&lt;/a&gt; array, you must set the concreteType field of each Used subclass. &lt;p&gt; Access Control: READ access is granted to those users who can see a single Entity that was generated by this Activity. &lt;/p&gt;
-    :type body: str
+    :param body: 
+    :type body: dict | bytes
 
     :rtype: JsonActivity
     """
-    return 'do some magic!'
+    if connexion.request.is_json:
+        body = JsonActivityRequest.from_dict(connexion.request.get_json())  # noqa: E501
+    activity = JsonActivity().to_dict()
+    activity.update(body.to_dict())
+    activity_id = mongo.db.activities.insert_one(activity).inserted_id
+
+    return json_util.dumps(mongo.db.activities.find_one({'_id': activity_id}))
 
 
 def delete_activity(id, user_id, body=None):  # noqa: E501
