# synprov/models/__init__.py
@@ -4,6 +4,7 @@
 from __future__ import absolute_import
 # import models into model package
 from synprov.models.json_activity import JsonActivity
+from synprov.models.json_activity_request import JsonActivityRequest
 from synprov.models.json_paginated_results_of_reference import JsonPaginatedResultsOfReference
 from synprov.models.json_reference import JsonReference
 from synprov.models.json_used import JsonUsed
