# synprov/models/json_activity_request.py
@@ -1,0 +1,118 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from synprov.models.base_model_ import Model
+from synprov.models.json_used import JsonUsed
+from synprov import util
+
+from synprov.models.json_used import JsonUsed  # noqa: E501
+
+class JsonActivityRequest(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, used=None, name=None, description=None):  # noqa: E501
+        """JsonActivityRequest - a model defined in OpenAPI
+
+        :param used: The used of this JsonActivityRequest.  # noqa: E501
+        :type used: List[JsonUsed]
+        :param name: The name of this JsonActivityRequest.  # noqa: E501
+        :type name: str
+        :param description: The description of this JsonActivityRequest.  # noqa: E501
+        :type description: str
+        """
+        self.openapi_types = {
+            'used': List[JsonUsed],
+            'name': str,
+            'description': str
+        }
+
+        self.attribute_map = {
+            'used': 'used',
+            'name': 'name',
+            'description': 'description'
+        }
+
+        self._used = used
+        self._name = name
+        self._description = description
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'JsonActivityRequest':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The json_ActivityRequest of this JsonActivityRequest.  # noqa: E501
+        :rtype: JsonActivityRequest
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def used(self):
+        """Gets the used of this JsonActivityRequest.
+
+
+        :return: The used of this JsonActivityRequest.
+        :rtype: List[JsonUsed]
+        """
+        return self._used
+
+    @used.setter
+    def used(self, used):
+        """Sets the used of this JsonActivityRequest.
+
+
+        :param used: The used of this JsonActivityRequest.
+        :type used: List[JsonUsed]
+        """
+
+        self._used = used
+
+    @property
+    def name(self):
+        """Gets the name of this JsonActivityRequest.
+
+
+        :return: The name of this JsonActivityRequest.
+        :rtype: str
+        """
+        return self._name
+
+    @name.setter
+    def name(self, name):
+        """Sets the name of this JsonActivityRequest.
+
+
+        :param name: The name of this JsonActivityRequest.
+        :type name: str
+        """
+
+        self._name = name
+
+    @property
+    def description(self):
+        """Gets the description of this JsonActivityRequest.
+
+
+        :return: The description of this JsonActivityRequest.
+        :rtype: str
+        """
+        return self._description
+
+    @description.setter
+    def description(self, description):
+        """Sets the description of this JsonActivityRequest.
+
+
+        :param description: The description of this JsonActivityRequest.
+        :type description: str
+        """
+
+        self._description = description
