# synprov/models/json_used.py
@@ -6,8 +6,10 @@ from datetime import date, datetime  # noqa: F401
 from typing import List, Dict  # noqa: F401
 
 from synprov.models.base_model_ import Model
+from synprov.models.json_reference import JsonReference
 from synprov import util
 
+from synprov.models.json_reference import JsonReference  # noqa: E501
 
 class JsonUsed(Model):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
@@ -15,25 +17,25 @@ class JsonUsed(Model):
     Do not edit the class manually.
     """
 
-    def __init__(self, concrete_type=None, was_executed=None):  # noqa: E501
+    def __init__(self, reference=None, was_executed=None):  # noqa: E501
         """JsonUsed - a model defined in OpenAPI
 
-        :param concrete_type: The concrete_type of this JsonUsed.  # noqa: E501
-        :type concrete_type: str
+        :param reference: The reference of this JsonUsed.  # noqa: E501
+        :type reference: JsonReference
         :param was_executed: The was_executed of this JsonUsed.  # noqa: E501
         :type was_executed: bool
         """
         self.openapi_types = {
-            'concrete_type': str,
+            'reference': JsonReference,
             'was_executed': bool
         }
 
         self.attribute_map = {
-            'concrete_type': 'concreteType',
+            'reference': 'reference',
             'was_executed': 'wasExecuted'
         }
 
-        self._concrete_type = concrete_type
+        self._reference = reference
         self._was_executed = was_executed
 
     @classmethod
@@ -48,25 +50,25 @@ class JsonUsed(Model):
         return util.deserialize_model(dikt, cls)
 
     @property
-    def concrete_type(self):
-        """Gets the concrete_type of this JsonUsed.
+    def reference(self):
+        """Gets the reference of this JsonUsed.
 
 
-        :return: The concrete_type of this JsonUsed.
-        :rtype: str
+        :return: The reference of this JsonUsed.
+        :rtype: JsonReference
         """
-        return self._concrete_type
+        return self._reference
 
-    @concrete_type.setter
-    def concrete_type(self, concrete_type):
-        """Sets the concrete_type of this JsonUsed.
+    @reference.setter
+    def reference(self, reference):
+        """Sets the reference of this JsonUsed.
 
 
-        :param concrete_type: The concrete_type of this JsonUsed.
-        :type concrete_type: str
+        :param reference: The reference of this JsonUsed.
+        :type reference: JsonReference
         """
 
-        self._concrete_type = concrete_type
+        self._reference = reference
 
     @property
     def was_executed(self):
