# synprov/openapi/openapi.yaml
@@ -24,46 +24,12 @@ paths:
         was generated by this Activity.
         </p>
       operationId: create_activity
-      parameters:
-      - description: The user that is doing the create.
-        explode: true
-        in: query
-        name: user_id
-        required: true
-        schema:
-          type: number
-        style: form
       requestBody:
         content:
           application/json:
             schema:
-              description: |-
-                Create a new <a
-                href="${org.sagebionetworks.repo.model.provenance.Activity}"
-                >Activity</a>. If the passed <a
-                href="${org.sagebionetworks.repo.model.provenance.Activity}">Activity</a>
-                object contains a <a
-                href="${org.sagebionetworks.repo.model.provenance.Used}" >Used</a> array,
-                you must set the concreteType field of each Used subclass.
-                <p>
-                Access Control: READ access is granted to those users who can see a single Entity that
-                was generated by this Activity.
-                </p>
-              format: binary
-              type: string
-        description: |-
-          Create a new <a
-          href="${org.sagebionetworks.repo.model.provenance.Activity}"
-          >Activity</a>. If the passed <a
-          href="${org.sagebionetworks.repo.model.provenance.Activity}">Activity</a>
-          object contains a <a
-          href="${org.sagebionetworks.repo.model.provenance.Used}" >Used</a> array,
-          you must set the concreteType field of each Used subclass.
-          <p>
-          Access Control: READ access is granted to those users who can see a single Entity that
-          was generated by this Activity.
-          </p>
-        required: false
+              $ref: '#/components/schemas/json_ActivityRequest'
+        required: true
       responses:
         201:
           content:
@@ -304,6 +270,26 @@ paths:
       x-openapi-router-controller: synprov.controllers.activities_controller
 components:
   schemas:
+    json_ActivityRequest:
+      example:
+        used:
+        - reference: '...'
+          wasExecuted: true
+        - reference: '...'
+          wasExecuted: false
+        name: '...'
+        description: '...'
+      properties:
+        used:
+          items:
+            $ref: '#/components/schemas/json_Used'
+          type: array
+        name:
+          type: string
+        description:
+          type: string
+      title: ActivityRequest
+      type: object
     json_Activity:
       example:
         id: '...'
@@ -376,11 +362,11 @@ components:
       type: object
     json_Used:
       example:
-        concreteType: '...'
+        reference: '...'
         wasExecuted: true
       properties:
-        concreteType:
-          type: string
+        reference:
+          $ref: '#/components/schemas/json_Reference'
         wasExecuted:
           type: boolean
       title: Used
